# FractalClock

./: Cargo.toml  LICENCE  README.md  run
src/: clock.wgsl  fractal.wgsl  indices.wgsl  lib.rs  main.rs  vertices.wgsl
